<resources>
    <string name="title_popular_movies">Popular Movies</string>
    <string name="title_top_rated_movies">Top-Rated Movies</string>
    <string name="title_favorite_movies">Favorite Movies</string>
    <string name="action_menu_sort">Sort</string>
    <string name="sort_most_popular">Most Popular</string>
    <string name="sort_top_rated">Top Rated</string>
    <string name="show_favorite">Favorite</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_retry">RETRY</string>
    <string name="dialog_title_sort">Sort</string>
    <string name="toolbar_title_movie_detail">Movie Detail</string>
    <string name="message_loading_popular_movies">Getting Popular Movies</string>
    <string name="message_loading_top_rated_movies">Getting Top-Rated Movies</string>
    <string name="message_loading_favorite_movies">Getting Your Favorite Movies</string>
    <string name="message_error_load_data">Cannot load data</string>
    <string name="image_content_description_movie_poster">Movie Poster</string>
    <string name="label_synopsis">Synopsis</string>
    <string name="label_trailer">Trailers</string>
    <string name="label_review">Reviews</string>
    <string name="image_content_description_play_button">Play Button</string>
    <string name="image_content_description_sad_emoji">Sad Emoji</string>
    <string name="image_content_description_trailer_thumbnail">Trailer Thumbnail</string>
    <string name="label_no_trailer_found">No Trailer Found</string>
    <string name="label_no_review_found">No Review Found</string>
    <string name="label_no_favorite_movie_added_yet">No favorite movie added yet</string>
    <string name="label_pick_favorite_movie">Browse movie</string>
    <string name="label_no_movie_selected">No movie selected</string>
    <string name="label_offline">Could not load data\nPlease check your internet connection</string>
    <string name="label_reload">Reload</string>
    <string name="image_content_description_favorite_movie">Favorite Movie</string>
    <string name="image_content_description_offline_icon">Offline Icon</string>
    <string name="image_content_description_no_movie_selected">No Movie Selected</string>
</resources>
