<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/standard_8"
    android:paddingLeft="@dimen/standard_16"
    android:paddingRight="@dimen/standard_16"
    android:paddingTop="@dimen/standard_8">

    <RadioButton
        android:id="@+id/rb_sort_by_popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_8"
        android:text="@string/sort_most_popular" />

    <RadioButton
        android:id="@+id/rb_sort_by_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_8"
        android:text="@string/sort_top_rated" />

    <RadioButton
        android:id="@+id/rb_show_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_favorite" />
</RadioGroup>
