<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".modules.movie_detail.DetailMovieActivity">

    <ImageView
        android:id="@+id/iv_movie_poster"
        android:layout_width="@dimen/detail_movie_poster_width_default"
        android:layout_height="@dimen/detail_movie_poster_height_default"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/standard_16"
        android:layout_marginStart="@dimen/standard_16"
        android:layout_marginTop="@dimen/standard_16"
        android:contentDescription="@string/image_content_description_movie_poster"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_movie_paceholder" />

    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_16"
        android:layout_marginRight="@dimen/standard_16"
        android:layout_marginTop="@dimen/standard_16"
        android:layout_toEndOf="@id/iv_movie_poster"
        android:layout_toRightOf="@id/iv_movie_poster"
        android:fontFamily="sans-serif-medium"
        android:maxLines="16"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_standard_22" />

    <LinearLayout
        android:id="@+id/ll_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_movie_title"
        android:layout_marginLeft="@dimen/standard_16"
        android:layout_marginRight="@dimen/standard_16"
        android:layout_toEndOf="@id/iv_movie_poster"
        android:layout_toRightOf="@id/iv_movie_poster"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_average_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textColor="@color/colorAccent"
            android:textSize="45sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/standard_8"
            android:layout_marginStart="@dimen/standard_8"
            android:orientation="vertical">

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_vote_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_person_black_24dp"
                android:drawableRight="@drawable/ic_person_black_24dp"
                android:gravity="bottom"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_rating"
        android:layout_marginLeft="@dimen/standard_16"
        android:layout_marginRight="@dimen/standard_16"
        android:layout_marginStart="@dimen/standard_16"
        android:layout_marginTop="@dimen/standard_4"
        android:layout_toEndOf="@id/iv_movie_poster"
        android:layout_toRightOf="@id/iv_movie_poster"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_movie_poster"
        android:layout_marginLeft="@dimen/standard_16"
        android:layout_marginRight="@dimen/standard_16"
        android:layout_marginTop="@dimen/standard_16"
        android:fontFamily="sans-serif-medium"
        android:text="@string/label_synopsis"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_standard_20" />

    <TextView
        android:id="@+id/tv_synopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_marginBottom="@dimen/standard_16"
        android:layout_marginLeft="@dimen/standard_16"
        android:layout_marginRight="@dimen/standard_16"
        android:layout_marginTop="@dimen/standard_8" />

    <TextView
        android:id="@+id/textView66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_synopsis"
        android:layout_marginLeft="@dimen/standard_16"
        android:layout_marginRight="@dimen/standard_16"
        android:fontFamily="sans-serif-medium"
        android:text="@string/label_trailer"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_standard_20" />

    <FrameLayout
        android:id="@+id/fl_trailer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView66">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_8" />

        <LinearLayout
            android:id="@+id/ll_no_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/standard_8"
            android:layout_marginLeft="@dimen/standard_16"
            android:layout_marginRight="@dimen/standard_16"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image_content_description_sad_emoji"
                android:src="@drawable/ic_sad" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/standard_8"
                android:text="@string/label_no_trailer_found" />
        </LinearLayout>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/trailer_loading_progress"
            style="@style/AVLoadingIndicatorView.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/standard_16"
            android:layout_marginRight="@dimen/standard_16"
            android:visibility="visible"
            app:indicatorColor="@color/colorAccent"
            app:indicatorName="BallPulseIndicator" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fl_trailer"
        android:layout_marginLeft="@dimen/standard_16"
        android:layout_marginRight="@dimen/standard_16"
        android:layout_marginTop="@dimen/standard_16"
        android:fontFamily="sans-serif-medium"
        android:text="@string/label_review"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_standard_20" />

    <LinearLayout
        android:id="@+id/ll_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_8" />

        <LinearLayout
            android:id="@+id/ll_no_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/standard_8"
            android:layout_marginLeft="@dimen/standard_16"
            android:layout_marginRight="@dimen/standard_16"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image_content_description_sad_emoji"
                android:src="@drawable/ic_sad" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/standard_8"
                android:text="@string/label_no_review_found" />
        </LinearLayout>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/review_loading_progress"
            style="@style/AVLoadingIndicatorView.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/standard_16"
            android:layout_marginRight="@dimen/standard_16"
            android:visibility="visible"
            app:indicatorColor="@color/colorAccent"
            app:indicatorName="BallPulseIndicator" />

    </LinearLayout>
</RelativeLayout>
